--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -2,7 +2,7 @@ name: Android Auto Build
 
 on:
   push:
-    branches: [main]  # 推送至 main 分支时触发
+    branches: [master]  # 推送至 main 分支时触发
 
 jobs:
   build:
